@@ -1,6 +1,8 @@
 1.4.4 - [REALESEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+- Fixed #15892: XML Storage for Schema casts Integer defaults to string and
+  detects field change wrong
 - Fixed #15895: Setting an Index Primary should enforce Unique
 - Fixed: Handling of not null in SQLite
 
